# ceneo-webscraper

./: .env.example  .gitignore  LICENSE.md  README.md  app.py  functions.py  products.json  pyproject.toml  requirements.txt
app/: __init__.py  api_routes.py  routes.py  web_routes.py
app/lib/: api_exception.py  utils.py
app/services/: scraper.py  store.py
app/static/css/: index.css
app/static/js/: home.js  product.js
app/templates/: 404.html  home.html  layout.html  macros.html  navigation.html
app/templates/home/: page.html
app/templates/product/: page.html  product_info.html  product_reviews.html
app/templates/products/: no_products.html  page.html  products-table.html  products_table.html
old/: app.py  functions.py
static/: index.css
templates/: author.html  charts.html  extract.html  homepage.html  product.html  products.html
