[tool.poetry]
name = "ceneo-webscraper"
version = "0.1.0"
description = ""
authors = ["Bartosz LipinÌski <bartosz.s.lipinski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
