[tool.poetry]
name = "ceneo-webscraper"
version = "0.1.0"
description = ""
authors = ["Bartosz Lipiński <bartosz.s.lipinski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
firebase-admin = "^6.2.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.3"
xlsxwriter = "^3.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
